    Thanks to César Gómez Martín <cesar.gomez@gmail.com>.
  * Added Swedish debconf template. (Closes: #330987)
    Thanks to Daniel Nylander <po@danielnylander.se>.
  * Added Portuguese debconf template. (Closes: #338892)
    Thanks to Simão Pedro Cardoso <pthell@gmail.com>.
  * Include pci plugins into bochs package. (Closes: #341436)
    Thanks to Robert Millan <rmh@aybabtu.com>
  * Wrap lines in debian/control fields (knowingly breaking policy).

 -- Guillem Jover <guillem@debian.org>  Sun, 23 Oct 2005 11:06:43 +0300

bochs (2.2.1-2) unstable; urgency=low

  * Use misc:Depends instead of an explicit dependency to debconf
    to get the alternative debconf-2.0 as well.
  * Fix typo in bochsrc.5 that prevents the line from being displayed.
    (Closes: #326528)
    - debian/patches/01_doc.patch: Updated.
    Thanks to Nicolas François <nicolas.francois@centraliens.net>.
  * Update LGPL to 2.1 and fix FSF address in debian/copyright.
  * Change Build-Depends to 'libreadline5-dev | libreadline-dev' from
    'libreadline4-dev'.
  * Fix bashisms in bochs.config and bochs.postinst.
  * Added missing angle to email address in sb16ctrl.1.
  * Install sb16ctl.1 in the binary.
  * Use variable assignment and handle spaces in filenames correctly.
    - debian/launcher: Updated.
  * Do not use a variable with read and use $() instead of backticks.
    - debian/launcher/etc/bochs-init/init.sh: Reindent. Updated.

 -- Guillem Jover <guillem@debian.org>  Sun, 11 Sep 2005 05:24:24 +0300

bochs (2.2.1-1) unstable; urgency=low

  * New Upstream Release.
    - debian/patches/00_base.patch: Synced.
    - debian/patches/01_doc.patch: Likewise.
    - debian/patches/02_libtool.patch: Likewise.
    - debian/patches/03_gcc-4.0.patch: Likewise.
    - debian/patches/04_no_pcibios_init.patch: Removed.
    - Fix ">>PANIC<< prefetch: RIP > CS.limit". (Closes: #162785, #288766)
    - Fix TUN/TAP network interface. (Closes: #268422)
  * Added Vietnamese debconf translation. (Closes: #313170)